[package]
name = "aip-filtering"
version = "0.1.0"
authors = ["J0sh0nat0r <jojo.parillon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
itertools = "0.9"
lalrpop-util = "0.19"
pest = "2.1"
pest-ast = "0.3"
pest_derive = "2.1"
regex = "1"
